force-app/main/default/objects/Demand_Raised__c/Demand_Raised__c.object-meta.xml
<CustomObject>
    <label>Demand Raised</label>
    <nameField>
        <displayFormat>DR-{0000}</displayFormat>
        <label>Demand Raised Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Demand Raised</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>