force-app/main/default/objects/Demand_Raised__c/fields/Current_Demand_amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Demand_amount__c</fullName>
    <label>Current Demand amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>