force-app/main/default/objects/Demand_Raised__c/fields/Current_Milestone_Excluding_the_TDS__c.field-meta.xml
<CustomField>
    <fullName>Current_Milestone_Excluding_the_TDS__c</fullName>
    <label>Current Milestone Excluding the TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>