force-app/main/default/objects/Demand_Raised__c/fields/Current_Milestone_TDS_1__c.field-meta.xml
<CustomField>
    <fullName>Current_Milestone_TDS_1__c</fullName>
    <label>Current Milestone TDS @ 1%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>