force-app/main/default/objects/Demand_Raised__c/fields/Demand_Email_Content__c.field-meta.xml
<CustomField>
    <fullName>Demand_Email_Content__c</fullName>
    <label>Demand Email Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>