force-app/main/default/objects/Demand_Raised__c/fields/Demanded_Date__c.field-meta.xml
<CustomField>
    <fullName>Demanded_Date__c</fullName>
    <label>Demanded Date</label>
    <type>DateTime</type>
</CustomField>