force-app/main/default/objects/Demand_Raised__c/fields/Milestone_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Percentage__c</fullName>
    <label>Milestone Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>