force-app/main/default/objects/Demand_Raised__c/fields/Pending_Dues_excluding_TDS__c.field-meta.xml
<CustomField>
    <fullName>Pending_Dues_excluding_TDS__c</fullName>
    <label>Pending Dues excluding TDS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>