force-app/main/default/objects/Demand_Raised__c/fields/Pending_Payment_TDS_1__c.field-meta.xml
<CustomField>
    <fullName>Pending_Payment_TDS_1__c</fullName>
    <label>Pending Payment TDS @ 1%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>