force-app/main/default/objects/Demand_Raised__c/fields/Pre_Termination_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Termination_Mail_Date__c</fullName>
    <label>Pre Termination Mail Date</label>
    <type>Date</type>
</CustomField>