force-app/main/default/objects/Demand_Raised__c/fields/Project_Block_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Block_Name__c</fullName>
    <formula>Booking__r.Plot__r.Block_Lookup__r.Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project &amp; Block Name</label>
    <type>Text</type>
</CustomField>