force-app/main/default/objects/Demand_Raised__c/fields/Termination_Mail_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Mail_Date__c</fullName>
    <label>Termination Mail Date</label>
    <type>Date</type>
</CustomField>