force-app/main/default/objects/Demand_Raised__c/fields/X1st_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Reminder_Date__c</fullName>
    <label>1st Reminder Date</label>
    <type>Date</type>
</CustomField>