force-app/main/default/objects/Demand_Raised__c/fields/X2nd_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Reminder_Date__c</fullName>
    <label>2nd Reminder Date</label>
    <type>Date</type>
</CustomField>