force-app/main/default/objects/Demand_Raised__c/fields/X2nd_Reminder_Interest_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Reminder_Interest_Date__c</fullName>
    <label>Not in Use</label>
    <type>Date</type>
</CustomField>