force-app/main/default/objects/Demand_Raised__c/fields/X3rd_Reminder_Interest_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Reminder_Interest_Date__c</fullName>
    <label>3rd Reminder Interest Date</label>
    <type>Date</type>
</CustomField>